<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">ArmyPicker</string>
	<string name="title_activity_army">Armies</string>
	<string name="new_item">new</string>
	<string name="abort">Abort</string>
	<string name="your_available_armies">Your armies:</string>
	<string name="available_units">Available units:</string>
	<string name="your_selected_units">Selected units:</string>
	<string name="delete_button">Button to delete the entry</string>
	<string name="available_armies">Available armies:</string>
	<string name="ok">OK</string>
	<string name="army_name">Army name:</string>
	<string name="type_hq">HQ</string>
	<string name="type_elite">Elite</string>
	<string name="type_standard">Standard</string>
	<string name="type_fast">Fast Attack</string>
	<string name="type_heavy">Heavy Support</string>
	<string name="type_low">Lord of War</string>
	<string name="type_flyer">Flyer</string>
	<string name="type_fort">Fortification</string>
	<string name="type_transport">Dedicated</string>
	<string name="sort_by_class">Sort by class</string>
	<string name="show_option_summaries">Show option summaries</string>
	<string name="rolls">Rolls</string>
	<string name="kills">Kills</string>
	<string name="toughness">Toughness</string>
	<string name="chance">Chance</string>
	<string name="strength">Strength</string>
	<string name="bs">BS</string>
	<string name="save">Save</string>
	<string name="fnp">FNP</string>
	<string name="average">Average</string>
	<string name="hits">Hits</string>
	<string name="no_value">-</string>
	<string name="saved">Saved</string>
	<string name="wounds">Wounds</string>
	<string name="rending">Rending</string>
	<string name="inv_cover">Inv/Cover</string>
	<string name="download">Download</string>
	<string name="title_activity_characters">Characters</string>
	<string name="pick_trait">Pick trait</string>
	<string name="open_character_sheet">Open character sheet</string>
	<string name="show_unit_stats">Show unit stats</string>
	<string name="show_weapon_stats">Show weapon stats</string>
	<string name="show_dice_calculator">Show dice calculator</string>
	<string name="show_army_sheet">Show army sheet</string>
	<string name="open_detachments">Open detachments</string>
	<string name="available_choices">Available choices</string>
	<string name="title_activity_battalions">Detachments</string>
	<string name="chance_re_roll_wound">Re-roll wound</string>
	<string name="chance_re_roll_hit">Re-roll hit</string>
	<string name="chance_ap">AP</string>
	<string name="chance_rend">Rend</string>

</resources>
