<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/army_list_gradient" >

	<TextView
		android:id="@+id/army_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#A0FFFFFF"
		android:textSize="20sp"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:paddingLeft="10dp"
		android:text="@string/your_available_armies"
		/>

	<ListView
		android:id="@+id/army_selection"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/army_title"
		android:choiceMode="singleChoice"
		android:divider="@drawable/navigation_list_separator"
		android:dividerHeight="1dp" >
	</ListView>

	<LinearLayout
		android:id="@+id/army_available_armies_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="#80000000">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/army_list_gradient"
			android:orientation="vertical"
			android:layout_margin="20dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="#A0FFFFFF"
				android:textSize="20sp"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"
				android:text="@string/available_armies"
				/>
			
			<ListView
				android:id="@+id/army_available_army_selection"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:choiceMode="singleChoice"
				android:background="@drawable/army_list_gradient"
				android:divider="@drawable/navigation_list_separator"
				android:dividerHeight="1dp" >
			</ListView>

			<Button
				android:id="@+id/army_select_abort"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:textColor="#FFFFFFFF"
				android:text="@string/abort" />

		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/army_edit_army"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="#80000000">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/army_list_gradient"
			android:orientation="vertical"
			android:layout_margin="20dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="#A0FFFFFF"
				android:textSize="20sp"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"
				android:text="@string/army_name"
				/>

			<EditText
			    android:id="@+id/army_name_edit"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:textColor="#A0FFFFFF"
			    android:textSize="20sp" >

			    <requestFocus />
			</EditText>
			
			<View 
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"/>

			<Button
				android:id="@+id/army_edit_ok"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:textColor="#FFFFFFFF"
				android:text="@string/ok" />

		</LinearLayout>
	</LinearLayout>
</RelativeLayout>

