<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/army_list_gradient"
	tools:context="${relativePackage}.${activityClass}" >

	<TextView
		android:id="@+id/army_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#A0FFFFFF"
		android:textSize="20sp"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:paddingLeft="10dp"
		android:text="@string/your_selected_units"
		/>

	<TextView
		android:id="@+id/army_points"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:textColor="#A0FFFFFF"
		android:textSize="20sp"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:paddingLeft="10dp"
		android:paddingRight="35dp"
		android:text="1000"
		/>
	
	<ListView
		android:id="@+id/army_unit_selection"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/army_title"
		android:choiceMode="singleChoice"
		android:divider="@drawable/navigation_list_separator"
		android:dividerHeight="1dp" >
	</ListView>

	<LinearLayout
		android:id="@+id/army_available_units_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="#80000000">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/army_list_gradient"
			android:orientation="vertical"
			android:layout_margin="20dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="#A0FFFFFF"
				android:textSize="20sp"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"
				android:text="@string/available_units"
				/>
			
			<ListView
				android:id="@+id/army_available_unit_selection"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:choiceMode="singleChoice"
				android:background="@drawable/army_list_gradient"
				android:divider="@drawable/navigation_list_separator"
				android:dividerHeight="1dp" >
			</ListView>

			<Button
				android:id="@+id/army_select_abort"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:textColor="#FFFFFFFF"
				android:text="@string/abort" />

		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
